# kanban_vibe

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: main.py
backend/tests/: test_app.py
docs/: AI_CONTRACT.md  DATABASE.md  PLAN.md
frontend/: AGENTS.md  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  KanbanColumnPreview.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-windows.bat  start-windows.ps1  stop-mac.sh  stop-windows.bat  stop-windows.ps1
scripts/run/: last-start.txt
